added get_check
