# Receiver/app.py
@@ -105,6 +105,9 @@ def rating_game(body):
     logger.info(f"rating_game event with body: {body} ")
     return produce_event_with_type("rating_game", body)
 
+def get_check():
+    return NoContent, 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api('openapi.yaml', strict_validation=True, validate_responses=True)
 
